// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Store] Plannings Reducer [Failure] Should handle GetClosedPlannings 1`] = `
Object {
  "closedPlannings": Array [],
  "coldPlannings": Array [],
  "highlightedPlanning": "",
  "openPlannings": Array [],
  "timeSummary": Object {
    "sumManualMonth": 0,
    "sumManualToday": 0,
    "sumTotalDay": 0,
    "sumTotalMonth": 0,
  },
}
`;

exports[`[Store] Plannings Reducer [Failure] Should handle GetOpenPlannings 1`] = `
Object {
  "closedPlannings": Array [],
  "coldPlannings": Array [],
  "highlightedPlanning": "",
  "openPlannings": Array [],
  "timeSummary": Object {
    "sumManualMonth": 0,
    "sumManualToday": 0,
    "sumTotalDay": 0,
    "sumTotalMonth": 0,
  },
}
`;

exports[`[Store] Plannings Reducer [Failure] Should handle StartPlanning 1`] = `
Object {
  "closedPlannings": Array [],
  "coldPlannings": Array [],
  "highlightedPlanning": "",
  "openPlannings": Array [
    Object {
      "Active": false,
      "ActivityID": 0,
      "CloseComment": "string",
      "ClosedAt": 0,
      "ColdPlanningID": 0,
      "CreatedAt": 0,
      "Estimation": 0,
      "ID": 33,
      "IsColdPlanning": true,
      "IsManual": true,
      "IssueActivities": null,
      "IssueDone": 0,
      "IssueDueDate": 0,
      "IssueEstimation": 0,
      "IssueID": "string",
      "IssuePriorities": null,
      "IssueSpent": 0,
      "IssueStatuses": null,
      "IssueTitle": "string",
      "IssueTypes": null,
      "IssueURL": "string",
      "OpenComment": "string",
      "Outdated": true,
      "PlanningDone": true,
      "ProjectID": "string",
      "Reported": 0,
      "SpentManual": 0,
      "SpentOffline": 0,
      "SpentOnline": 0,
      "StartedBy": "string",
      "Status": "OPEN",
      "TrackerID": 0,
    },
    Object {
      "Active": false,
      "ActivityID": 0,
      "CloseComment": "string",
      "ClosedAt": 0,
      "ColdPlanningID": 0,
      "CreatedAt": 0,
      "Estimation": 0,
      "ID": 44,
      "IsColdPlanning": true,
      "IsManual": true,
      "IssueActivities": null,
      "IssueDone": 0,
      "IssueDueDate": 0,
      "IssueEstimation": 0,
      "IssueID": "string",
      "IssuePriorities": null,
      "IssueSpent": 0,
      "IssueStatuses": null,
      "IssueTitle": "string",
      "IssueTypes": null,
      "IssueURL": "string",
      "OpenComment": "string",
      "Outdated": true,
      "PlanningDone": true,
      "ProjectID": "string",
      "Reported": 0,
      "SpentManual": 0,
      "SpentOffline": 0,
      "SpentOnline": 0,
      "StartedBy": "string",
      "Status": "OPEN",
      "TrackerID": 0,
    },
  ],
  "startPlanningError": Object {
    "code": 666,
    "message": "SOME_ERROR",
  },
  "timeSummary": Object {
    "sumManualMonth": 0,
    "sumManualToday": 0,
    "sumTotalDay": 0,
    "sumTotalMonth": 0,
  },
}
`;

exports[`[Store] Plannings Reducer [Failure] Should handle StopPlanning 1`] = `
Object {
  "closedPlannings": Array [],
  "coldPlannings": Array [],
  "highlightedPlanning": "",
  "openPlannings": Array [
    Object {
      "Active": false,
      "ActivityID": 0,
      "CloseComment": "string",
      "ClosedAt": 0,
      "ColdPlanningID": 0,
      "CreatedAt": 0,
      "Estimation": 0,
      "ID": 33,
      "IsColdPlanning": true,
      "IsManual": true,
      "IssueActivities": null,
      "IssueDone": 0,
      "IssueDueDate": 0,
      "IssueEstimation": 0,
      "IssueID": "string",
      "IssuePriorities": null,
      "IssueSpent": 0,
      "IssueStatuses": null,
      "IssueTitle": "string",
      "IssueTypes": null,
      "IssueURL": "string",
      "OpenComment": "string",
      "Outdated": true,
      "PlanningDone": true,
      "ProjectID": "string",
      "Reported": 0,
      "SpentManual": 0,
      "SpentOffline": 0,
      "SpentOnline": 0,
      "StartedBy": "string",
      "Status": "OPEN",
      "TrackerID": 0,
    },
    Object {
      "Active": false,
      "ActivityID": 0,
      "CloseComment": "string",
      "ClosedAt": 0,
      "ColdPlanningID": 0,
      "CreatedAt": 0,
      "Estimation": 0,
      "ID": 44,
      "IsColdPlanning": true,
      "IsManual": true,
      "IssueActivities": null,
      "IssueDone": 0,
      "IssueDueDate": 0,
      "IssueEstimation": 0,
      "IssueID": "string",
      "IssuePriorities": null,
      "IssueSpent": 0,
      "IssueStatuses": null,
      "IssueTitle": "string",
      "IssueTypes": null,
      "IssueURL": "string",
      "OpenComment": "string",
      "Outdated": true,
      "PlanningDone": true,
      "ProjectID": "string",
      "Reported": 0,
      "SpentManual": 0,
      "SpentOffline": 0,
      "SpentOnline": 0,
      "StartedBy": "string",
      "Status": "OPEN",
      "TrackerID": 0,
    },
  ],
  "stopPlanningError": Object {
    "code": 666,
    "message": "SOME_ERROR",
  },
  "timeSummary": Object {
    "sumManualMonth": 0,
    "sumManualToday": 0,
    "sumTotalDay": 0,
    "sumTotalMonth": 0,
  },
}
`;

exports[`[Store] Plannings Reducer [Success] [Snapshot] Should handle GetOpenPlannings 1`] = `
Object {
  "closedPlannings": Array [],
  "coldPlannings": Array [],
  "highlightedPlanning": "",
  "openPlannings": Array [
    Object {
      "Active": false,
      "ActivityID": 0,
      "CloseComment": "string",
      "ClosedAt": 0,
      "ColdPlanningID": 0,
      "CreatedAt": 0,
      "Estimation": 0,
      "ID": 0,
      "IsColdPlanning": true,
      "IsManual": true,
      "IssueActivities": null,
      "IssueDone": 0,
      "IssueDueDate": 0,
      "IssueEstimation": 0,
      "IssueID": "string",
      "IssuePriorities": null,
      "IssueSpent": 0,
      "IssueStatuses": null,
      "IssueTitle": "string",
      "IssueTypes": null,
      "IssueURL": "string",
      "OpenComment": "string",
      "Outdated": true,
      "PlanningDone": true,
      "ProjectID": "string",
      "Reported": 0,
      "SpentManual": 0,
      "SpentOffline": 0,
      "SpentOnline": 0,
      "StartedBy": "string",
      "Status": "OPEN",
      "TrackerID": 0,
    },
  ],
  "timeSummary": Object {
    "sumManualMonth": 0,
    "sumManualToday": 0,
    "sumTotalDay": 0,
    "sumTotalMonth": 0,
  },
}
`;

exports[`[Store] Plannings Reducer [Success] Should handle GetClosedPlannings 1`] = `
Object {
  "closedPlannings": Array [
    Object {
      "Active": false,
      "ActivityID": 0,
      "CloseComment": "string",
      "ClosedAt": 0,
      "ColdPlanningID": 0,
      "CreatedAt": 0,
      "Estimation": 0,
      "ID": 0,
      "IsColdPlanning": true,
      "IsManual": true,
      "IssueActivities": null,
      "IssueDone": 0,
      "IssueDueDate": 0,
      "IssueEstimation": 0,
      "IssueID": "string",
      "IssuePriorities": null,
      "IssueSpent": 0,
      "IssueStatuses": null,
      "IssueTitle": "string",
      "IssueTypes": null,
      "IssueURL": "string",
      "OpenComment": "string",
      "Outdated": true,
      "PlanningDone": true,
      "ProjectID": "string",
      "Reported": 0,
      "SpentManual": 0,
      "SpentOffline": 0,
      "SpentOnline": 0,
      "StartedBy": "string",
      "Status": "OPEN",
      "TrackerID": 0,
    },
  ],
  "coldPlannings": Array [],
  "highlightedPlanning": "",
  "openPlannings": Array [],
  "timeSummary": Object {
    "sumManualMonth": 0,
    "sumManualToday": 0,
    "sumTotalDay": 0,
    "sumTotalMonth": 0,
  },
}
`;

exports[`[Store] Plannings Reducer [Success] Should handle StartPlanning 1`] = `
Object {
  "closedPlannings": Array [],
  "coldPlannings": Array [],
  "highlightedPlanning": "",
  "openPlannings": Array [
    Object {
      "Active": true,
      "ActivityID": 0,
      "CloseComment": "string",
      "ClosedAt": 0,
      "ColdPlanningID": 0,
      "CreatedAt": 0,
      "Estimation": 0,
      "ID": 33,
      "IsColdPlanning": true,
      "IsManual": true,
      "IssueActivities": null,
      "IssueDone": 0,
      "IssueDueDate": 0,
      "IssueEstimation": 0,
      "IssueID": "string",
      "IssuePriorities": null,
      "IssueSpent": 0,
      "IssueStatuses": null,
      "IssueTitle": "string",
      "IssueTypes": null,
      "IssueURL": "string",
      "OpenComment": "string",
      "Outdated": true,
      "PlanningDone": true,
      "ProjectID": "string",
      "Reported": 0,
      "SpentManual": 0,
      "SpentOffline": 0,
      "SpentOnline": 0,
      "StartedBy": "string",
      "Status": "OPEN",
      "TrackerID": 0,
    },
    Object {
      "Active": false,
      "ActivityID": 0,
      "CloseComment": "string",
      "ClosedAt": 0,
      "ColdPlanningID": 0,
      "CreatedAt": 0,
      "Estimation": 0,
      "ID": 44,
      "IsColdPlanning": true,
      "IsManual": true,
      "IssueActivities": null,
      "IssueDone": 0,
      "IssueDueDate": 0,
      "IssueEstimation": 0,
      "IssueID": "string",
      "IssuePriorities": null,
      "IssueSpent": 0,
      "IssueStatuses": null,
      "IssueTitle": "string",
      "IssueTypes": null,
      "IssueURL": "string",
      "OpenComment": "string",
      "Outdated": true,
      "PlanningDone": true,
      "ProjectID": "string",
      "Reported": 0,
      "SpentManual": 0,
      "SpentOffline": 0,
      "SpentOnline": 0,
      "StartedBy": "string",
      "Status": "OPEN",
      "TrackerID": 0,
    },
  ],
  "timeSummary": Object {
    "sumManualMonth": 0,
    "sumManualToday": 0,
    "sumTotalDay": 0,
    "sumTotalMonth": 0,
  },
}
`;

exports[`[Store] Plannings Reducer [Success] Should handle StopPlanning 1`] = `
Object {
  "closedPlannings": Array [],
  "coldPlannings": Array [],
  "highlightedPlanning": "",
  "openPlannings": Array [
    Object {
      "Active": false,
      "ActivityID": 0,
      "CloseComment": "string",
      "ClosedAt": 0,
      "ColdPlanningID": 0,
      "CreatedAt": 0,
      "Estimation": 0,
      "ID": 33,
      "IsColdPlanning": true,
      "IsManual": true,
      "IssueActivities": null,
      "IssueDone": 0,
      "IssueDueDate": 0,
      "IssueEstimation": 0,
      "IssueID": "string",
      "IssuePriorities": null,
      "IssueSpent": 0,
      "IssueStatuses": null,
      "IssueTitle": "string",
      "IssueTypes": null,
      "IssueURL": "string",
      "OpenComment": "string",
      "Outdated": true,
      "PlanningDone": true,
      "ProjectID": "string",
      "Reported": 0,
      "SpentManual": 0,
      "SpentOffline": 0,
      "SpentOnline": 0,
      "StartedBy": "string",
      "Status": "OPEN",
      "TrackerID": 0,
    },
    Object {
      "Active": false,
      "ActivityID": 0,
      "CloseComment": "string",
      "ClosedAt": 0,
      "ColdPlanningID": 0,
      "CreatedAt": 0,
      "Estimation": 0,
      "ID": 44,
      "IsColdPlanning": true,
      "IsManual": true,
      "IssueActivities": null,
      "IssueDone": 0,
      "IssueDueDate": 0,
      "IssueEstimation": 0,
      "IssueID": "string",
      "IssuePriorities": null,
      "IssueSpent": 0,
      "IssueStatuses": null,
      "IssueTitle": "string",
      "IssueTypes": null,
      "IssueURL": "string",
      "OpenComment": "string",
      "Outdated": true,
      "PlanningDone": true,
      "ProjectID": "string",
      "Reported": 0,
      "SpentManual": 0,
      "SpentOffline": 0,
      "SpentOnline": 0,
      "StartedBy": "string",
      "Status": "OPEN",
      "TrackerID": 0,
    },
  ],
  "timeSummary": Object {
    "sumManualMonth": 0,
    "sumManualToday": 0,
    "sumTotalDay": 0,
    "sumTotalMonth": 0,
  },
}
`;

exports[`[Store] Plannings Reducer [SyncSuccess] Should handle TimeTickInActivePlanning 1`] = `
Object {
  "closedPlannings": Array [],
  "coldPlannings": Array [],
  "highlightedPlanning": "",
  "openPlannings": Array [
    Object {
      "Active": true,
      "ActivityID": 0,
      "CloseComment": "string",
      "ClosedAt": 0,
      "ColdPlanningID": 0,
      "CreatedAt": 0,
      "Estimation": 0,
      "ID": 33,
      "IsColdPlanning": true,
      "IsManual": true,
      "IssueActivities": null,
      "IssueDone": 0,
      "IssueDueDate": 0,
      "IssueEstimation": 0,
      "IssueID": "string",
      "IssuePriorities": null,
      "IssueSpent": 0,
      "IssueStatuses": null,
      "IssueTitle": "string",
      "IssueTypes": null,
      "IssueURL": "string",
      "OpenComment": "string",
      "Outdated": true,
      "PlanningDone": true,
      "ProjectID": "string",
      "Reported": 0,
      "SpentManual": 0,
      "SpentOffline": 0,
      "SpentOnline": 201.001,
      "StartedBy": "string",
      "Status": "OPEN",
      "TrackerID": 0,
    },
    Object {
      "Active": false,
      "ActivityID": 0,
      "CloseComment": "string",
      "ClosedAt": 0,
      "ColdPlanningID": 0,
      "CreatedAt": 0,
      "Estimation": 0,
      "ID": 44,
      "IsColdPlanning": true,
      "IsManual": true,
      "IssueActivities": null,
      "IssueDone": 0,
      "IssueDueDate": 0,
      "IssueEstimation": 0,
      "IssueID": "string",
      "IssuePriorities": null,
      "IssueSpent": 0,
      "IssueStatuses": null,
      "IssueTitle": "string",
      "IssueTypes": null,
      "IssueURL": "string",
      "OpenComment": "string",
      "Outdated": true,
      "PlanningDone": true,
      "ProjectID": "string",
      "Reported": 0,
      "SpentManual": 0,
      "SpentOffline": 0,
      "SpentOnline": 0,
      "StartedBy": "string",
      "Status": "OPEN",
      "TrackerID": 0,
    },
  ],
  "timeSummary": Object {
    "sumManualMonth": 0,
    "sumManualToday": 0,
    "sumTotalDay": 1.001,
    "sumTotalMonth": 1.001,
  },
}
`;
